# python-sounddevice

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS.rst  README.rst  make_dist.sh  pyproject.toml  setup.py  sounddevice.py  sounddevice_build.py
.github/workflows/: docs.yml  publish.yml  python-versions.yml  sounddevice-data.yml  static-analyzers.yml
_custom_build/: backend.py  sounddevice_build.py
_sounddevice_data/portaudio-binaries/: README.md
doc/: README  api.rst  conf.py  contributing.rst  examples.rst  fake__sounddevice.py  fake_cffi.py  index.rst  installation.rst  requirements.txt  usage.rst  version-history.rst
doc/api/: checking-hardware.rst  convenience-functions.rst  expert-mode.rst  index.rst  misc.rst  module-defaults.rst  platform-specific-settings.rst  raw-streams.rst  streams.rst
examples/: README.rst  asyncio_coroutines.py  asyncio_generators.py  play_file.py  play_long_file.py  play_long_file_raw.py  play_sine.py  play_stream.py  plot_input.py  priming_output.py  rec_gui.py  rec_unlimited.py  spectrogram.py  wire.py
loopback/: loopback.py
src/: sounddevice.py
src/_sounddevice_data/: README
